# aic-community-collector

./: README.md  pyproject.toml
configs/: e2e_default.yaml  e2e_test.yaml  e2e_trial2_only.yaml
docs/: config-reference.md  usage-guide.md
policies/: CollectWrapper.py
scripts/: collect_e2e.sh  smoke_test_f5.sh  smoke_test_partial_trial.sh
src/aic_collector/: build_training_config.py  postprocess_run.py  sampler.py  webapp.py
src/aic_collector/prefect/: flow.py  policy_env.py  serve.py  shell_runner.py
tests/: test_training_sampler.py
